--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-c3p0</artifactId>
+   
+</dependency>
 	</dependencies>
 
 	<build>
