--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.aop.proxy-target-class=true
 # "root" as username and password.
 spring.datasource.url=jdbc:mysql://localhost:3306/dv-ds-20202C-g1
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=
+#rootroot
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -14,6 +15,13 @@ spring.datasource.validationQuery = SELECT 1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
+
+#to show sql
+spring.jpa.properties.hibernate.show_sql=true
+#formatting
+spring.jpa.properties.hibernate.format_sql=true
+#printing parameter values in order
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Hibernate ddl auto (create, create-drop, update)
 #spring.jpa.hibernate.ddl-auto = update
